Finalized the Knowledge Base's PDK insertion logic and applied it on Sky130A

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,150 +11,41 @@
     "import xml.etree.ElementTree as ET\n",
     "import os\n",
     "from json import dumps\n",
-    "import xmltodict"
+    "import xmltodict\n",
+    "from collections.abc import Iterable\n",
+    "from sqlalchemy import create_engine, inspect, Table, Column, ForeignKey, Integer, Boolean, Float, String, Text\n",
+    "from sqlalchemy.orm import declarative_base, relationship\n",
+    "from sqlalchemy.sql.expression import text\n",
+    "import pandas as pd\n",
+    "from json import dumps\n",
+    "import keyring\n",
+    "import google.generativeai as genai\n",
+    "import re\n",
+    "from contextlib import suppress"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3b5cd27c-c52c-46b5-81ea-0b5d9ff2993a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_FILEPATH  = './pdk_knowledge_base.db'\n",
+    "with suppress(FileNotFoundError):\n",
+    "    os.remove(DB_FILEPATH)\n",
+    "\n",
+    "LYT_FILEPATH        = '$PDK_ROOT/$PDK/libs.tech/klayout/tech/$PDK.lyt'\n",
+    "DB_CONN_STR         = f'sqlite:///{DB_FILEPATH}'\n",
+    "INSERT_PDK_FILEPATH = './script.sql'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9b5c3567-1618-4551-8c1e-f3baae153866",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'technology': {'name': 'sky130',\n",
-       "  'description': 'SkyWater 130nm technology',\n",
-       "  'group': None,\n",
-       "  'dbu': '0.001',\n",
-       "  'base-path': None,\n",
-       "  'original-base-path': '$PDK_ROOT/$PDK/libs.tech/klayout',\n",
-       "  'layer-properties_file': 'sky130A.lyp',\n",
-       "  'add-other-layers': 'true',\n",
-       "  'default-grids': '0.01,0.005!',\n",
-       "  'reader-options': {'gds2': {'box-mode': '1',\n",
-       "    'allow-big-records': 'true',\n",
-       "    'allow-multi-xy-records': 'true'},\n",
-       "   'common': {'create-other-layers': 'true',\n",
-       "    'layer-map': 'layer_map()',\n",
-       "    'enable-properties': 'true',\n",
-       "    'enable-text-objects': 'true'},\n",
-       "   'lefdef': {'read-all-layers': 'true',\n",
-       "    'layer-map': 'layer_map()',\n",
-       "    'dbu': '0.001',\n",
-       "    'produce-net-names': 'true',\n",
-       "    'net-property-name': '#1',\n",
-       "    'produce-inst-names': 'true',\n",
-       "    'inst-property-name': '#1',\n",
-       "    'produce-pin-names': 'false',\n",
-       "    'pin-property-name': '#1',\n",
-       "    'produce-cell-outlines': 'true',\n",
-       "    'cell-outline-layer': 'OUTLINE',\n",
-       "    'produce-placement-blockages': 'true',\n",
-       "    'placement-blockage-layer': 'PLACEMENT_BLK',\n",
-       "    'produce-regions': 'true',\n",
-       "    'region-layer': 'REGIONS',\n",
-       "    'produce-via-geometry': 'true',\n",
-       "    'via-geometry-suffix': '.drawing',\n",
-       "    'via-geometry-datatype': '0',\n",
-       "    'produce-pins': 'true',\n",
-       "    'pins-suffix': '.pin',\n",
-       "    'pins-datatype': '2',\n",
-       "    'produce-obstructions': 'true',\n",
-       "    'obstructions-suffix': '.blockage',\n",
-       "    'obstructions-datatype': '3',\n",
-       "    'produce-blockages': 'true',\n",
-       "    'blockages-suffix': '.blockage',\n",
-       "    'blockages-datatype': '4',\n",
-       "    'produce-labels': 'true',\n",
-       "    'labels-suffix': '.label',\n",
-       "    'labels-datatype': '1',\n",
-       "    'produce-routing': 'true',\n",
-       "    'routing-suffix': '.drawing',\n",
-       "    'routing-datatype': '0',\n",
-       "    'lef-files': 'merged.lef'},\n",
-       "   'mebes': {'invert': 'false',\n",
-       "    'subresolution': 'true',\n",
-       "    'produce-boundary': 'true',\n",
-       "    'num-stripes-per-cell': '64',\n",
-       "    'num-shapes-per-cell': '0',\n",
-       "    'data-layer': '1',\n",
-       "    'data-datatype': '0',\n",
-       "    'data-name': 'DATA',\n",
-       "    'boundary-layer': '0',\n",
-       "    'boundary-datatype': '0',\n",
-       "    'boundary-name': 'BORDER',\n",
-       "    'layer-map': 'layer_map()',\n",
-       "    'create-other-layers': 'true'},\n",
-       "   'dxf': {'dbu': '0.001',\n",
-       "    'unit': '1',\n",
-       "    'text-scaling': '100',\n",
-       "    'circle-points': '100',\n",
-       "    'circle-accuracy': '0',\n",
-       "    'contour-accuracy': '0',\n",
-       "    'polyline-mode': '0',\n",
-       "    'render-texts-as-polygons': 'false',\n",
-       "    'keep-other-cells': 'false',\n",
-       "    'keep-layer-names': 'false',\n",
-       "    'create-other-layers': 'true',\n",
-       "    'layer-map': 'layer_map()'},\n",
-       "   'cif': {'wire-mode': '0',\n",
-       "    'dbu': '0.001',\n",
-       "    'layer-map': 'layer_map()',\n",
-       "    'create-other-layers': 'true',\n",
-       "    'keep-layer-names': 'false'},\n",
-       "   'mag': {'lambda': '1',\n",
-       "    'dbu': '0.001',\n",
-       "    'layer-map': 'layer_map()',\n",
-       "    'create-other-layers': 'true',\n",
-       "    'keep-layer-names': 'false',\n",
-       "    'merge': 'true',\n",
-       "    'lib-paths': None}},\n",
-       "  'writer-options': {'gds2': {'write-timestamps': 'true',\n",
-       "    'write-cell-properties': 'false',\n",
-       "    'write-file-properties': 'false',\n",
-       "    'no-zero-length-paths': 'false',\n",
-       "    'multi-xy-records': 'false',\n",
-       "    'max-vertex-count': '8000',\n",
-       "    'max-cellname-length': '32000',\n",
-       "    'libname': 'LIB'},\n",
-       "   'oasis': {'compression-level': '2',\n",
-       "    'write-cblocks': 'false',\n",
-       "    'strict-mode': 'false',\n",
-       "    'write-std-properties': '1',\n",
-       "    'subst-char': '*',\n",
-       "    'permissive': 'false'},\n",
-       "   'cif': [{'polygon-mode': '0'},\n",
-       "    {'dummy-calls': 'false', 'blank-separator': 'false'}],\n",
-       "   'mag': {'lambda': '0', 'tech': None, 'write-timestamp': 'true'}},\n",
-       "  'connectivity': {'connection': ['poly,licon,li',\n",
-       "    'li,mcon,met1',\n",
-       "    'met1,via1,met2',\n",
-       "    'met2,via2,met3',\n",
-       "    'met3,via3,met4',\n",
-       "    'met4,via4,met5'],\n",
-       "   'symbols': [\"capm='89/44'\",\n",
-       "    \"cap2m='97/44'\",\n",
-       "    \"poly='66/20+66/5-66/13-66/14-66/15'\",\n",
-       "    \"licon='66/44'\",\n",
-       "    \"li='67/20+67/5-67/13-67/14-67/15'\",\n",
-       "    \"mcon='67/44'\",\n",
-       "    \"met1='68/20+68/5-68/14-68/15'\",\n",
-       "    \"via1='68/44'\",\n",
-       "    \"met2='69/20+69/5-69/14-69/15'\",\n",
-       "    \"via2='69/44'\",\n",
-       "    \"met3='70/20+70/5-70/14-70/15'\",\n",
-       "    \"via3='70/44-capm'\",\n",
-       "    \"met4='71/20+71/5-71/14-71/15'\",\n",
-       "    \"via4='71/44-cap2m'\",\n",
-       "    \"met5='72/20+72/5-72/14-72/15'\"]}}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def xml_to_json(xml_filepath):\n",
     "    xml_filepath = os.path.expandvars(xml_filepath)\n",
@@ -162,129 +53,17 @@
     "        s = f.read()\n",
     "    return xmltodict.parse(s)\n",
     "\n",
-    "lyt = xml_to_json('$PDK_ROOT/$PDK/libs.tech/klayout/tech/$PDK.lyt')\n",
-    "lyt"
+    "lyt = dumps(xml_to_json(LYT_FILEPATH), indent=4)\n",
+    "# print(lyt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a91e6156-b7e7-4ee2-be44-bc637d61f59b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-09-28 14:24:45,097 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2025-09-28 14:24:45,097 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"technologies\")\n",
-      "2025-09-28 14:24:45,097 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,098 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"technologies\")\n",
-      "2025-09-28 14:24:45,098 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,099 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"writer_options\")\n",
-      "2025-09-28 14:24:45,099 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,099 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"writer_options\")\n",
-      "2025-09-28 14:24:45,099 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,100 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"connections\")\n",
-      "2025-09-28 14:24:45,100 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,100 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"connections\")\n",
-      "2025-09-28 14:24:45,101 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,101 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"symbol_physical_layer_pairs\")\n",
-      "2025-09-28 14:24:45,101 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,102 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"symbol_physical_layer_pairs\")\n",
-      "2025-09-28 14:24:45,102 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,102 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"symbols\")\n",
-      "2025-09-28 14:24:45,102 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,103 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"symbols\")\n",
-      "2025-09-28 14:24:45,103 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,103 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"physical_layers\")\n",
-      "2025-09-28 14:24:45,104 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,104 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"physical_layers\")\n",
-      "2025-09-28 14:24:45,104 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2025-09-28 14:24:45,105 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE technologies (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tname VARCHAR(255) NOT NULL, \n",
-      "\tdescription TEXT, \n",
-      "\tdbu FLOAT NOT NULL, \n",
-      "\tadd_other_layers BOOLEAN NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tUNIQUE (name)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,105 INFO sqlalchemy.engine.Engine [no key 0.00023s] ()\n",
-      "2025-09-28 14:24:45,108 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE physical_layers (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tlayer INTEGER NOT NULL, \n",
-      "\tdatatype INTEGER NOT NULL, \n",
-      "\tnegative BOOLEAN DEFAULT 0 NOT NULL, \n",
-      "\tPRIMARY KEY (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,109 INFO sqlalchemy.engine.Engine [no key 0.00025s] ()\n",
-      "2025-09-28 14:24:45,112 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE writer_options (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tlibname VARCHAR(255) NOT NULL, \n",
-      "\tmax_vertex_count INTEGER NOT NULL, \n",
-      "\twrite_timestamps BOOLEAN NOT NULL, \n",
-      "\ttechnology_id INTEGER, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(technology_id) REFERENCES technologies (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,112 INFO sqlalchemy.engine.Engine [no key 0.00028s] ()\n",
-      "2025-09-28 14:24:45,115 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE symbols (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\tname VARCHAR(255) NOT NULL, \n",
-      "\ttechnology_id INTEGER, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(technology_id) REFERENCES technologies (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,115 INFO sqlalchemy.engine.Engine [no key 0.00029s] ()\n",
-      "2025-09-28 14:24:45,118 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE connections (\n",
-      "\tid INTEGER NOT NULL, \n",
-      "\ta_symbol_id INTEGER, \n",
-      "\tvia_symbol_id INTEGER, \n",
-      "\tb_symbol_id INTEGER, \n",
-      "\ttechnology_id INTEGER, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(a_symbol_id) REFERENCES symbols (id), \n",
-      "\tFOREIGN KEY(via_symbol_id) REFERENCES symbols (id), \n",
-      "\tFOREIGN KEY(b_symbol_id) REFERENCES symbols (id), \n",
-      "\tFOREIGN KEY(technology_id) REFERENCES technologies (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,119 INFO sqlalchemy.engine.Engine [no key 0.00028s] ()\n",
-      "2025-09-28 14:24:45,122 INFO sqlalchemy.engine.Engine \n",
-      "CREATE TABLE symbol_physical_layer_pairs (\n",
-      "\tsymbol_id INTEGER NOT NULL, \n",
-      "\tphysical_layer_id INTEGER NOT NULL, \n",
-      "\tPRIMARY KEY (symbol_id, physical_layer_id), \n",
-      "\tFOREIGN KEY(symbol_id) REFERENCES symbols (id), \n",
-      "\tFOREIGN KEY(physical_layer_id) REFERENCES physical_layers (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2025-09-28 14:24:45,122 INFO sqlalchemy.engine.Engine [no key 0.00028s] ()\n",
-      "2025-09-28 14:24:45,125 INFO sqlalchemy.engine.Engine COMMIT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine, Table, Column, ForeignKey, Integer, Boolean, Float, String, Text\n",
-    "from sqlalchemy.orm import declarative_base, relationship\n",
-    "from sqlalchemy.sql.expression import text\n",
-    "\n",
     "Base = declarative_base()\n",
     "\n",
     "class Technology(Base):\n",
@@ -300,7 +79,6 @@
     "    connections       = relationship('Connection', back_populates='technology')\n",
     "    symbols           = relationship('Symbol', back_populates='technology')\n",
     "    \n",
-    "\n",
     "class WriterOptions(Base):\n",
     "    __tablename__    = 'writer_options'\n",
     "    id               = Column(Integer, primary_key=True)\n",
@@ -347,21 +125,128 @@
     "    as_a_symbol_connections   = relationship('Connection', foreign_keys=[Connection.a_symbol_id], back_populates='a_symbol')\n",
     "    as_via_symbol_connections = relationship('Connection', foreign_keys=[Connection.via_symbol_id], back_populates='via_symbol')\n",
     "    as_b_symbol_connections   = relationship('Connection', foreign_keys=[Connection.b_symbol_id], back_populates='b_symbol')\n",
-    "\n",
+    "    \n",
     "    physical_layers           = relationship('PhysicalLayer', secondary=SymbolPhysicalLayerPairs, back_populates='symbols')\n",
     "    \n",
     "class PhysicalLayer(Base):\n",
     "    __tablename__ = 'physical_layers'\n",
     "    id            = Column(Integer, primary_key=True)\n",
-    "\n",
+    "    \n",
     "    layer         = Column(Integer, nullable=False)\n",
     "    datatype      = Column(Integer, nullable=False)\n",
     "    negative      = Column(Boolean, server_default=text('0'), nullable=False)\n",
     "    \n",
     "    symbols       = relationship('Symbol', secondary=SymbolPhysicalLayerPairs, back_populates='physical_layers')\n",
     "\n",
-    "engine = create_engine('sqlite:///pdk_knowledge_base.db', echo=True)\n",
+    "engine = create_engine(DB_CONN_STR, echo=False)\n",
     "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cd3c9002-f01c-4de8-ae8e-121a035f3c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_db_schema(db_conn_str):\n",
+    "    engine    = create_engine(db_conn_str)\n",
+    "    inspector = inspect(engine)\n",
+    "    schema    = []\n",
+    "    for table_name in inspector.get_table_names():\n",
+    "        s = f'TABLE: \"{table_name}\"\\n\\n'\n",
+    "        s += pd.DataFrame.from_records(\n",
+    "            inspector.get_columns(table_name)\n",
+    "        ).to_markdown(index=False)\n",
+    "        schema.append(s)\n",
+    "    schema = '\\n\\n---\\n\\n'.join(schema)\n",
+    "    return schema\n",
+    "\n",
+    "db_schema = get_db_schema(DB_CONN_STR)\n",
+    "# print(db_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "49cef29d-2b11-4d80-bb88-b02ebeb38067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_pdk_insertion_script(db_schema, lyt, export_path):\n",
+    "\n",
+    "    api_key = keyring.get_password('Gemini', 'default')\n",
+    "    genai.configure(api_key=api_key)\n",
+    "    \n",
+    "    model = genai.GenerativeModel('gemini-2.5-flash')\n",
+    "    response = model.generate_content(f\"\"\"\n",
+    "    TASK:\n",
+    "    ------\n",
+    "    Use the given SQLite SCHEMA and \\\n",
+    "    JSON to generate SQLite queries \\\n",
+    "    that insert the relevant data \\\n",
+    "    from the JSON as records to \\\n",
+    "    their respective tables from \\\n",
+    "    the given SCHEMA.\n",
+    "    \n",
+    "    OUTPUT FORMAT:\n",
+    "    ---------------\n",
+    "    Do NOT explain anything, just \\\n",
+    "    display the SQLite query \\\n",
+    "    statements as a script, that's \\\n",
+    "    it.\n",
+    "    \n",
+    "    ===============================\n",
+    "    \n",
+    "    SCHEMA:\n",
+    "    --------\n",
+    "    {db_schema}\n",
+    "    \n",
+    "    ===============================\n",
+    "    \n",
+    "    JSON:\n",
+    "    ------\n",
+    "    {lyt}\n",
+    "    \"\"\")\n",
+    "\n",
+    "    sql_script = re.sub(r'```(sqlite)?', '', response.text).strip()\n",
+    "    with open(export_path, 'w') as f:\n",
+    "        f.write(sql_script)\n",
+    "\n",
+    "    return sql_script\n",
+    "\n",
+    "# _ = generate_pdk_insertion_script(db_schema, lyt, INSERT_PDK_FILEPATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8dbb241-1fa4-41d4-a909-be9bd18ba355",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "90368d4b-2a4f-40f1-9f6b-fff7b5a52649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_pdk(db_conn_str, sql_script):\n",
+    "    try:\n",
+    "        if os.path.isfile(sql_script):\n",
+    "            with open(sql_script) as f:\n",
+    "                sql_script = f.read()\n",
+    "        engine = create_engine(db_conn_str)\n",
+    "        conn   = engine.raw_connection()\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.executescript(sql_script)\n",
+    "        conn.commit()\n",
+    "    finally:\n",
+    "        conn.close()\n",
+    "\n",
+    "insert_pdk(DB_CONN_STR, INSERT_PDK_FILEPATH)"
    ]
   }
  ],
